<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_gradient"
    tools:context=".HighScore">

    <TextView
        android:id="@+id/tvQuickMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="@string/quick"
        android:textColor="#000"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tvQuickMathRules"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvQuickMathRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="@string/quick_rules"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuickMath" />

    <TextView
        android:id="@+id/tvTimeTrails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="@string/timeTrials"
        android:textColor="#000"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuickMathRules" />

    <TextView
        android:id="@+id/tvTimeTrailsRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="@string/time_trials_rules"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeTrails" />

    <TextView
        android:id="@+id/tvAdvanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="@string/advanced"
        android:textColor="#000"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeTrailsRules" />

    <TextView
        android:id="@+id/tvAdvancedRules"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:paddingBottom="30dp"
        android:text="@string/advanced_rules"
        android:textColor="#000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdvanced" />

    <TextView
        android:id="@+id/note_HighScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand_regular"
        android:gravity="center"
        android:text="@string/note_high_score"
        android:textColor="#000"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/button_Back"
        app:layout_constraintTop_toBottomOf="@id/tvAdvanced" />

    <Button
        android:id="@+id/button_Back"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_btn_back"
        android:fontFamily="@font/quicksand_regular"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="back"
        android:padding="15dp"
        android:text="@string/back"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>