<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_gradient">

    <ImageView
        android:id="@+id/ivAnimationKid"
        android:layout_width="175dp"
        android:layout_height="220dp"
        android:contentDescription="@string/image_kid"
        android:src="@anim/kid_anim"
        app:layout_constraintBottom_toTopOf="@id/linear_Creators"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linear_TextView" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/style_btn_back"
        android:fontFamily="@font/quicksand_regular"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:onClick="back"
        android:padding="15dp"
        android:text="@string/back"
        android:textColor="#000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linear_TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#000"
            android:textSize="36sp" />

        <TextView
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_regular"
            android:gravity="center|center_vertical"
            android:text="@string/app_idea"
            android:textColor="#000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_Creators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnBack">

        <TextView
            android:id="@+id/tvCreators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/creators"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCreated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/quicksand_regular"
            android:text="@string/created_by"
            android:textColor="#000"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>