<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/tvTimeTrails"
    android:background="@drawable/app_background_gradient">


    <TextView
        android:id="@+id/tvTimeTrailsInst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/quicksand_bold"
        android:paddingLeft="3dp"
        android:paddingRight="3dp"
        android:text="@string/find_correct_equation"
        android:textColor="#000"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivMute"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ivMute"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/mute_button"
        android:onClick="muteTemp"
        app:layout_constraintEnd_toStartOf="@+id/tvTimeTrailsInst"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_volume_up_black_24dp" />

    <ImageView
        android:id="@+id/ivAnimationTeacher"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_teacher"
        android:src="@anim/teacher_anim"
        app:layout_constraintBottom_toTopOf="@id/gridLayoutTimeTrails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimeTrailsScore" />

    <TextView
        android:id="@+id/tvTimeTrailsTimeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/coming_soon_regular"
        android:text="@string/time_left_ten"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/tvTimeTrailsScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFeedback" />

    <TextView
        android:id="@+id/tvTimeTrailsScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/coming_soon_regular"
        android:text="@string/start_score"
        android:textColor="#000"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/ivAnimationTeacher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimeTrailsTimeLeft" />

    <TextView
        android:id="@+id/tvFeedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/reeniebeanie"
        android:text="@string/go"
        android:textColor="#000"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/tvTimeTrailsTimeLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimeTrailsInst" />


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayoutTimeTrails"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_marginBottom="10dp"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivAnimationTeacher"
        app:rowCount="2"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btn00"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaticsc_bold"
            android:onClick="choose"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:tag="0"
            android:text="@string/answer"
            android:textDirection="anyRtl"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="40sp"
            android:background="@drawable/style_btn0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn01"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaticsc_bold"
            android:onClick="choose"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:tag="1"
            android:text="@string/answer1"
            android:textDirection="anyRtl"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="40sp"
            android:background="@drawable/style_btn2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn10"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaticsc_bold"
            android:onClick="choose"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:tag="2"
            android:text="@string/answer2"
            android:textDirection="anyRtl"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="40sp"
            android:background="@drawable/style_btn3"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />

        <Button
            android:id="@+id/btn11"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amaticsc_bold"
            android:onClick="choose"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:tag="3"
            android:text="@string/answer3"
            android:textDirection="anyRtl"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="40sp"
            android:background="@drawable/style_btn1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>